--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -153,7 +153,7 @@
                         <td>{{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</td>
                         <td>{{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</td>
                         <td>{{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
-                        <td>{{ c.report.exam.examVenue }}</td>
+                        <td>None</td>
                         <td>{{ c.report.exam.course.courseName }}</td>
                         <td>{{ c.report.exam.course.courseCodeSectionIntake }}</td>
                     </tr>
