--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -44,7 +44,7 @@
                         <tr class="
                             {% if not att.report.exam.examStatus %}
                                 inactive-row-show
-                            {% elif att.report.exam.examVenue is none %}
+                            {% elif att.report.exam.examStartTime is none %}
                                 error-row-show
                             {% endif %}
                         "> 
@@ -63,7 +63,7 @@
                                     <div>Exam Day</div><div><strong>: {{ att.report.exam.examStartTime.strftime("%A") }} - {{ att.report.exam.examEndTime.strftime("%A") }}</strong></div>
                                     <div>Exam Time</div><div><strong>: {{ att.report.exam.examStartTime.strftime("%H:%M") }} - {{ att.report.exam.examEndTime.strftime("%H:%M") }}</strong></div>
                                     <div>Exam Period</div><div><strong>: {{ (att.report.exam.examEndTime - att.report.exam.examStartTime).seconds // 3600 }}h {{ ((att.report.exam.examEndTime - att.report.exam.examStartTime).seconds % 3600) // 60 }}m</strong></div>
-                                    <div>Exam Venue</div><div><strong>: {{ att.report.exam.examVenue }}</strong></div>
+                                    <div>Exam Venue</div><div><strong>: None</strong></div>
                                 </div>
                             </td>
                             {% endif %}
