--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -166,10 +166,8 @@
                 </select>
             </div>
 
-            <div class="form-right">
-                <div class="button-wrapper">
-                    <button type="button" id="clearFilter">Clear Filter</button>
-                </div>
+            <div class="button-wrapper" style="margin: auto;">
+                <button type="button" id="clearFilter">Clear Filter</button>
             </div>
         </div>
     </form> 
