--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -166,7 +166,7 @@
                 </select>
             </div>
 
-            <div class="button-wrapper" style="margin: auto;">
+            <div class="button-wrapper" style="padding: 1%;">
                 <button type="button" id="clearFilter">Clear Filter</button>
             </div>
         </div>
