--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -244,7 +244,7 @@ function clearEditFields() {
 function populateEditForm(data) {
     document.getElementById('editProgramCode').value = data.courseDepartment || '';
     document.getElementById('editStudent').value = data.courseStudent || '';
-    document.getElementById('editVenue').value = data.courseStudent || '';
+    document.getElementById('editVenue').value = data.venue_availabilities.venueNumber || '';
     document.getElementById('editInvigilatorNo').value = data.examNoInvigilator || '';
 
     // split datetime for inputs
