--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -23,11 +23,11 @@
             <span>Past Exam</span>
         </div>
         <div style="display: flex; align-items: center; gap: 5px;">
-            <span style="width: 20px; height: 20px; background-color: #75bdf9; display: inline-block; border-radius: 4px;"></span>
+            <span style="width: 20px; height: 20px; background-color: #b5deff; display: inline-block; border-radius: 4px;"></span>
             <span>Upcoming Exam</span>
         </div>
         <div style="display: flex; align-items: center; gap: 5px;">
-            <span style="width: 20px; height: 20px; background-color: #dc74f7; display: inline-block; border-radius: 4px;"></span>
+            <span style="width: 20px; height: 20px; background-color: #e3bded; display: inline-block; border-radius: 4px;"></span>
             <span>Overnight Exam (Starts Today, Ends Tomorrow)</span>
         </div>
     </div>
