--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -37,6 +37,7 @@
                 <ul>    
                     <li>- Manually add new departments</li>
                     <li>- Edit existing department details</li>
+                    <li>- View and edit Dean, HOD, and HOS details</li>
                 </ul>
             </ul>
         </div>
@@ -114,6 +115,7 @@
                 <strong>Purpose:</strong>
                 <ul>    
                     <li>- View and update your profile information</li>
+                    <li>- Change your password and update contact details</li>
                 </ul>
             </ul>
         </div>
