--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -130,7 +130,7 @@
                             {% endfor %}
                         </select>
                         <button type="button" id="addVenueBtn" class="add-btn" 
-                                style="background-color: #28a745; color: white; border: none; border-radius: 5px; padding: 5px 10px;">
+                                style="background-color: #28a745; color: white; border: none; border-radius: 5px; padding: 10px 10px; font-size: large;">
                             +
                         </button>
                     </div>
@@ -483,7 +483,7 @@ document.addEventListener("DOMContentLoaded", function () {
                     .join("")}
             </select>
             <button type="button" class="removeVenueBtn" 
-                    style="background-color: #dc3545; color: white; border: none; border-radius: 5px; padding: 10px 10px;">
+                    style="background-color: #dc3545; color: white; border: none; border-radius: 5px; padding: 10px 10px; font-size: large;">
                 &times;
             </button>
         `;
